# TTS-Sidecar

./: .gitattributes  .gitignore  .npmignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SOURCE-OFFER.md  THIRD-PARTY-LICENSES.md  USAGE.md  install-linux.sh  install.ps1  install.sh  nuitka-crash-report.xml  package.json  pyproject.toml  requirements-lock-linux-cpu.txt  requirements.txt
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
claude-code-plugin/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
config/: config.toml
docs/: ARCHITECTURE.md  BUILD.md  Build-with-CICD.md  CLAUDE-CODE-PLUGIN.md  DAEMON-MODE.md  DESIGN.md  DISTRIBUTION.md  GOAL.md  NARRATION-INTEGRATION.md  PARITY.md  PRODUCTION-READINESS-AUDIT.md  PROJECT-REVIEW.md  RELEASING.md  ROADMAP.md  SELF-HOSTED-INSTALL.md  design.md  goal.md  migration-plan.md  project-review.md
scripts/: build_linux.py  build_macos.py  build_utils.py  build_windows.py  check_coverage.py  check_third_party_licenses.py  clean_build.py  create_installer_windows.py  install.py  pyinstaller_wrapper.py  render_cask.py  render_source_offer.py
src/: index.test.ts  index.ts
tests/: __init__.py  conftest.py  test_audio.py  test_audio_writer.py  test_build_linux.py  test_build_macos.py  test_build_utils.py  test_build_windows.py  test_cask.py  test_check_coverage.py  test_cli.py  test_compute_backend.py  test_conditionals.py  test_create_installer_windows.py  test_daemon.py  test_daemon_run.py  test_engine_cache.py  test_engine_progress.py  (+9 more)
(+73 files in other folders)
